feat: 오류에 따른 도메인 변경